feat: Add project report, update bike color, relabel 'General' to 'Logistics' in UI, and shorten the setup guide.

--- a/run_this.html
+++ b/run_this.html
@@ -14,7 +14,7 @@
             /* Muted Color Palette */
             --color-free: #22c55e;
             --color-occupied: #ef4444;
-            --color-bike: #f59e0b;
+            --color-bike: #ff7a00;
             --color-general: #3b82f6;
             --color-suv: #8b5cf6;
             --color-logistics: #8b5cf6;
@@ -748,7 +748,7 @@
                 <div class="footer-item">
                     <div class="footer-item-label">
                         <div class="color-bullet" style="background: var(--color-general)"></div>
-                        General
+                        Logistics
                     </div>
                     <div class="footer-item-value" id="avail-gen">0</div>
                 </div>
@@ -779,7 +779,7 @@
                 </div>
                 <div class="legend-item">
                     <div class="legend-color" style="background: var(--color-general)"></div>
-                    General
+                    Logistics
                 </div>
                 <div class="legend-item">
                     <div class="legend-color" style="background: var(--color-suv)"></div>
